kubernetes/deployment-1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: fe-demo-python
  name: fe-demo-python
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fe-demo-python
  strategy: {}
  template:
    metadata:
      labels:
        app: fe-demo-python
    spec:
      containers:
      - image: iconsent/fe-demo-python
        name: fe-demo
        resources: {}
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: fe-demo-python
  name: fe-demo-python
spec:
  ports:
  - name: web
    port: 8000
    protocol: TCP
    targetPort: 8000
  selector:
    app: fe-demo-python
  type: ClusterIP
status:
  loadBalancer: {}
